--- a/l2/cont.tex
+++ b/l2/cont.tex
@@ -472,7 +472,7 @@ N[C@@](C)(H)C(=O)O
 
 \item Если молекулы более или менее подвижны, то это накладывает дополнительные требования на учёт конформационных превращений.
 \item	 Для определения фармакофора надо определить, какой набор групп располагается в биополимере идентично.
-\item	  Надо быть уверенным, что выбранный набор молекул  связывается с белком в одном и том же месте. Однозначное указание на это можно получить только экспериментально.
+\item	  Надо быть уверенным, что выбранный набор молекул связывается с белком в одном и том же месте. Однозначное указание на это можно получить только экспериментально.
 	\end{itemize}
 \end{frame}
 
@@ -526,7 +526,7 @@ N[C@@](C)(H)C(=O)O
 \begin{frame}{ML в  хемоинформатике}
     \begin{itemize}
             \item Улучшение анализа HTS данных, в основном регрессии
-            \item Улучшение предсказания  афиности, токсичности, фармокинетике для заданных соединений. Регресии и не только.
+            \item Улучшение предсказания  аффинности, токсичности, фармокинетике для заданных соединений. Регресии и не только.
             \item Генерация новых  соединений под указанную задачу
         \end{itemize}
 \end{frame}
@@ -563,7 +563,7 @@ N[C@@](C)(H)C(=O)O
 \begin{frame}{3D}
     \begin{itemize}
         \item 3D дескрипторы извлекают химические особенности из трехмерных геометрий  и наиболее чувствительны структурным изменениям 
-        \item Могут  включать дескрипторы автокорреляции, данные об  заместителях , дескрипторы поверхности, объема и квантово-химические дескрипторы
+        \item Могут  включать дескрипторы автокорреляции, данные о заместителях , дескрипторы поверхности, объема и квантово-химические дескрипторы
         \item Трехмерные химические дескрипторы полезны для идентификации «каркасов» - отдельных химических каркасов со сходной связывающей активностью
         \item Ключевым ограничением является вычислительная сложность генерации конформеров и выравнивания структур
      \end{itemize}
@@ -596,7 +596,7 @@ N[C@@](C)(H)C(=O)O
 
 \begin{frame}{Fingerprints}
     \begin{itemize}
-        \item  Последние разработки - это continuous kernel  и встроенные нейронные FP. Это внутренние представления, полученные с помощью SVM и нейронных сетей.
+        \item  Последние разработки - это continuous kernel и встроенные нейронные FP. Это внутренние представления, полученные с помощью SVM и нейронных сетей.
         \item Duvenaud et al. распространил концепцию свертки на молекулы, представленные в виде двумерных молекулярных графов. 
         \end{itemize}
 \end{frame}
@@ -657,7 +657,7 @@ N[C@@](C)(H)C(=O)O
 
 \begin{frame}{Включение bioassay}
     \includegraphics[height=.6\textheight]{chem-assay.png}
-    Комбинация структурных и данных об активности позволяет улучшить производительность и показывает эффективный переход между scafolds \\
+    Комбинация структурных и данных об активности позволяет улучшить производительность и показывает эффективный переход между scaffolds \\
     \footnotesize 10.1186/s13321-019-0376-1
 \end{frame}
 
@@ -680,7 +680,7 @@ N[C@@](C)(H)C(=O)O
 
 \begin{frame}{AE и GAN}
     \begin{itemize}
-        \item Предварительно обученный автокодер использовался для сопоставления молекулярной структуры с латентным вектором
+        \item Предварительно обученный автоэнкодер использовался для сопоставления молекулярной структуры с латентным вектором
         \item GAN был обучен с использованием латентных векторов в качестве входных и выходных данных 
         \item После обучения GAN выбранные скрытые векторы были отображены обратно в структуры  
     \end{itemize}
@@ -718,9 +718,9 @@ N[C@@](C)(H)C(=O)O
 
 \begin{frame}{Направления для работы}
     \begin{itemize}
-        \item Объеденение баз данных. Комбинирование макисмально доступного количества данных для пары белок-ингибитор.
+        \item Объединение баз данных. Комбинирование максимально доступного количества данных для пары белок-ингибитор.
             \vspace{.2cm}
-        \item Правильно включение структурно-функциональных  данных для лигандов и белков.
+        \item Правильно включение структурно-функциональных данных для лигандов и белков.
             \vspace{.2cm}
         \end{itemize}
 \end{frame}
