--- a/lecures/l4/cont.tex
+++ b/lecures/l4/cont.tex
@@ -373,7 +373,7 @@
 
 \begin{frame}{Ограниченные галлюцинации}
     \centering
-    \includegraphics[width=\textwidth]{halluc-motif}
+    \includegraphics[width=0.5\textwidth]{halluc-motif}
     \begin{itemize}
         \item Cложная функцию потери, которая сочетает в себе часть из галлюцинаций с частью реконструкции мотива. 
         \item Подход с ограниченными галлюцинациями требует больших вычислительных ресурсов, поскольку для каждого шага градиентного спуска во время оптимизации последовательности требуется прямой и обратный проход через сеть.
@@ -383,7 +383,7 @@
 
 \begin{frame}{Inpainting}
     \centering
-    \includegraphics[width=0.7\textwidth]{inpainting.png}
+    \includegraphics[width=0.5\textwidth]{inpainting.png}
     \begin{itemize}
         \item Широкий спектр проблем проектирования структуры белков можно аналогичным образом сформулировать как проблемы восстановления недостающей информации 
         \end{itemize}
@@ -393,7 +393,7 @@
 
 \begin{frame}{Inpainting}
     \centering
-    \includegraphics[width=0.9\textwidth]{halluc-inp.png}
+    \includegraphics[width=0.8\textwidth]{halluc-inp.png}
 
 \end{frame}
 
