--- a/lecures/l6/cont.tex
+++ b/lecures/l6/cont.tex
@@ -65,10 +65,10 @@
     Источник: http://hdl.handle.net/1773/39951
 \end{frame}
 
-\begin{frame}{Дизайн последователþности, оптимизациā ротамеров}
+\begin{frame}{Дизайн последовательности, оптимизация ротамеров}
     Используется алгоритм стохастического моделирования отжига
-    (метод Моенте-Карло, имплементированнýй в Rosetta). Дизайн
-    проводитсā при фиксированном белковом остове.
+    (метод Монте-Карло, имплементированный в Rosetta). Дизайн
+    проводится при фиксированном белковом остове.
     Принцип работы в общем виде:
     \begin{itemize}
         \item  имеем начальный вид аминокислотного состава последовательности и ротамеров в окрестности кармана связявания
@@ -129,12 +129,12 @@
 
 \begin{frame}{Дизайн белков, связывающих 17-ОПГ}
     \begin{itemize}
-        \item Внимание авторов привлек резулþтат одного из дизайнов,
-        белковой основой длā которого послужил белок с
+        \item Внимание авторов привлек результат одного из дизайнов,
+        белковой основой для которого послужил белок с
         неизвестной функцией (RV0760) из
         Mycobacterium tuberculosis
-        \item      По резулþтатам первой ÿксперименталþной проверки
-        (метод дрожжевого дисплеā), ÿтот дизайн не смог свāзатþ
+        \item      По результатам первой экспериментальной проверки
+        (метод дрожжевого дисплея), этот дизайн не смог связать
         17-ОПГ
     \end{itemize}
 \end{frame}
