--- a/praks/prak_5.ipynb
+++ b/praks/prak_5.ipynb
@@ -2,48 +2,48 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# Дизайн хода остова белка"
-      ],
       "metadata": {
         "id": "7DhDTplxk8Hc"
-      }
+      },
+      "source": [
+        "# Дизайн хода остова белка"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "*весь код - для запуска в колабе. перед запуском включите gpu*"
-      ],
       "metadata": {
         "id": "fieXzJ_FlYck"
-      }
+      },
+      "source": [
+        "*весь код - для запуска в колабе. перед запуском включите gpu*"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## 1. Постановка задачи"
-      ],
       "metadata": {
         "id": "WKEOlbYWmCoF"
-      }
+      },
+      "source": [
+        "## 1. Постановка задачи"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Возьмем структуру [альфа-конотоксина](https://www.rcsb.org/structure/1AKG) и попробуем задизайнить структуру белка, способного его связывать."
-      ],
       "metadata": {
         "id": "b7Mb1q6klZcG"
-      }
+      },
+      "source": [
+        "Возьмем структуру [альфа-конотоксина](https://www.rcsb.org/structure/1AKG) и попробуем задизайнить структуру белка, способного его связывать."
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Загрузим файл со структурой и визуализируем ее."
-      ],
       "metadata": {
         "id": "BqqfhkUtl441"
-      }
+      },
+      "source": [
+        "Загрузим файл со структурой и визуализируем ее."
+      ]
     },
     {
       "cell_type": "code",
@@ -108,30 +108,30 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## 2. Галлюцинации"
-      ],
       "metadata": {
         "id": "mBfOqxoqmY2r"
-      }
+      },
+      "source": [
+        "## 2. Галлюцинации"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Используем метод галлюцинаций RFDesign (https://github.com/RosettaCommons/RFDesign/tree/main/hallucination)."
-      ],
       "metadata": {
         "id": "aVVa5R52muG6"
-      }
+      },
+      "source": [
+        "Используем метод галлюцинаций RFDesign (https://github.com/RosettaCommons/RFDesign/tree/main/hallucination)."
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Данный метод использует модель для предсказания белковой структуры RosettaFold. Модель получает на вход случайную последовательность и попарную матрицу расстояний и с помощью множества шагов оптимизации (SGD и MCMC) минимизирует лосс-функцию. Также реализована ограниченная галлюцинация, когда на вход подается частично известная последовательность и/или структура и галлюцинируются недостающие части."
-      ],
       "metadata": {
         "id": "B2gwHEbhs-EV"
-      }
+      },
+      "source": [
+        "Данный метод использует модель для предсказания белковой структуры RosettaFold. Модель получает на вход случайную последовательность и попарную матрицу расстояний и с помощью множества шагов оптимизации (SGD и MCMC) минимизирует лосс-функцию. Также реализована ограниченная галлюцинация, когда на вход подается частично известная последовательность и/или структура и галлюцинируются недостающие части."
+      ]
     },
     {
       "cell_type": "code",
@@ -144,7 +144,7 @@
         "# get repo and install dependencies\n",
         "!git clone https://github.com/RosettaCommons/RFDesign.git\n",
         "!pip -q install torch-geometric lie_learn icecream e3nn py3Dmol omegaconf\n",
-        "!pip install dgl==1.0.2+cu116 -f https://data.dgl.ai/wheels/cu116/repo.html\n",
+        "!pip install dgl -f https://data.dgl.ai/wheels/cu121/repo.html\n",
         "\n",
         "# get weights\n",
         "!wget http://files.ipd.uw.edu/pub/rfdesign/weights/BFF_last.pt -P RFDesign/hallucination/weights/rf_Nov05/\n",
@@ -174,12 +174,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Посмотрим на сгенерированную последовательность"
-      ],
       "metadata": {
         "id": "zt2DEHf0pa5X"
-      }
+      },
+      "source": [
+        "Посмотрим на сгенерированную последовательность"
+      ]
     },
     {
       "cell_type": "code",
@@ -196,12 +196,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Сгенерированная структура исходно не имеет боковых цепей. Добавим их."
-      ],
       "metadata": {
         "id": "cRDm0rbfp2Nn"
-      }
+      },
+      "source": [
+        "Сгенерированная структура исходно не имеет боковых цепей. Добавим их."
+      ]
     },
     {
       "cell_type": "code",
@@ -217,12 +217,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Визуализируем результат"
-      ],
       "metadata": {
         "id": "3Q0xDOnaqACg"
-      }
+      },
+      "source": [
+        "Визуализируем результат"
+      ]
     },
     {
       "cell_type": "code",
@@ -244,39 +244,39 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## 3. Диффузии"
-      ],
       "metadata": {
         "id": "_7GtwM5CqRb6"
-      }
+      },
+      "source": [
+        "## 3. Диффузии"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Используем диффузионную модель для генерации белка RFdiffusion (https://github.com/RosettaCommons/RFdiffusion)"
-      ],
       "metadata": {
         "id": "8jRvSMgYrNl6"
-      }
+      },
+      "source": [
+        "Используем диффузионную модель для генерации белка RFdiffusion (https://github.com/RosettaCommons/RFdiffusion)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Данный метод основан на модели денойзинга, которая на вход получает случайно распределенные координаты остатков и с помощью нескольких шагов денойзинга оптимизирует их координаты, получая осмысленную структуру белка. Как и в предыдущем случае, возможна частичная диффузия, когда часть структуры уже известна."
-      ],
       "metadata": {
         "id": "yWlFV0K4uslh"
-      }
+      },
+      "source": [
+        "Данный метод основан на модели денойзинга, которая на вход получает случайно распределенные координаты остатков и с помощью нескольких шагов денойзинга оптимизирует их координаты, получая осмысленную структуру белка. Как и в предыдущем случае, возможна частичная диффузия, когда часть структуры уже известна."
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "![diffusion](https://github.com/RosettaCommons/RFdiffusion/raw/main/img/main.png)"
-      ],
       "metadata": {
         "id": "nmCW7VyDjJjE"
-      }
+      },
+      "source": [
+        "![diffusion](https://github.com/RosettaCommons/RFdiffusion/raw/main/img/main.png)"
+      ]
     },
     {
       "cell_type": "code",
@@ -303,12 +303,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Запустим RFDiffusion."
-      ],
       "metadata": {
         "id": "IJ4wqOlVrJF-"
-      }
+      },
+      "source": [
+        "Запустим RFDiffusion."
+      ]
     },
     {
       "cell_type": "code",
@@ -327,12 +327,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Визуализируем результат"
-      ],
       "metadata": {
         "id": "OLlT9iS40iiS"
-      }
+      },
+      "source": [
+        "Визуализируем результат"
+      ]
     },
     {
       "cell_type": "code",
@@ -369,33 +369,38 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Как можно заметить, модель сгенерировала структуру исключительно из глицинов. Что можно сделать в таком случае? Восстановить последовательность. Для предсказания последовательности по структуре существуют самые разные методы."
-      ],
       "metadata": {
         "id": "wM2NnMd51QFK"
-      }
+      },
+      "source": [
+        "Как можно заметить, модель сгенерировала структуру исключительно из глицинов. Что можно сделать в таком случае? Восстановить последовательность. Для предсказания последовательности по структуре существуют самые разные методы."
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## 4. Использование галлюцинаций для восстановления последовательности"
-      ],
       "metadata": {
         "id": "gLNRdXKVCMar"
-      }
+      },
+      "source": [
+        "## 4. Использование галлюцинаций для восстановления последовательности"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "На прошлом занятии мы уже разбирали методы дизайна последовательности под нужную структуру с помошью стохастического градиентногого спуска. Похожим образом можно использовать и фреймворк для галлюцинаций, заставив его галлюцинировать только последовательность, но не структуру.\n"
-      ],
       "metadata": {
         "id": "F7JmlfC3CSEG"
-      }
+      },
+      "source": [
+        "На прошлом занятии мы уже разбирали методы дизайна последовательности под нужную структуру с помошью стохастического градиентногого спуска. Похожим образом можно использовать и фреймворк для галлюцинаций, заставив его галлюцинировать только последовательность, но не структуру.\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "1Vnx5loGCSQD"
+      },
+      "outputs": [],
       "source": [
         "%%time\n",
         "!mkdir toxin_diff_hal\n",
@@ -404,26 +409,26 @@
         "--receptor 1AKG.pdb --steps=g60,m100 \\\n",
         "--spike 0.05 --w_crmsd 1 \\\n",
         "--num 1 --out toxin_diff_hal/result\n"
-      ],
-      "metadata": {
-        "id": "1Vnx5loGCSQD"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "! python RFDesign/scripts/RosettaTR/trfold_relax.py --roll -sg 7,3 toxin_diff_hal/result_0.npz toxin_diff_hal/result_0.pdb toxin_diff_hal/result_0_relaxed.pdb"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "aPGq7BYzNpx_"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "! python RFDesign/scripts/RosettaTR/trfold_relax.py --roll -sg 7,3 toxin_diff_hal/result_0.npz toxin_diff_hal/result_0.pdb toxin_diff_hal/result_0_relaxed.pdb"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "DtNdSWzqILqR"
+      },
+      "outputs": [],
       "source": [
         "p = py3Dmol.view(js='https://3dmol.org/build/3Dmol.js')\n",
         "\n",
@@ -432,73 +437,73 @@
         "p.setStyle({'chain': 'B'},{'stick':{'colorscheme':'blueCarbon'}})\n",
         "p.zoomTo() # центрировать структуру\n",
         "p.show()"
-      ],
-      "metadata": {
-        "id": "DtNdSWzqILqR"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "5IX-XMfHfI3Y"
+      },
+      "outputs": [],
       "source": [
         "with open('/content/toxin_diff_hal/result_0.fas','r') as f:\n",
         "    for line in f:\n",
         "        print(line)"
-      ],
-      "metadata": {
-        "id": "5IX-XMfHfI3Y"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## 5. Нейросети для предсказания последовательности"
-      ],
       "metadata": {
         "id": "o_VBqp0pJpkB"
-      }
+      },
+      "source": [
+        "## 5. Нейросети для предсказания последовательности"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Для предсказания последовательности по структуре также существуют и обычные нейросети, например, ProteinMPNN (https://github.com/dauparas/ProteinMPNN). Возьмем фреймворк (https://github.com/nrbennet/dl_binder_design), включающий в себя предсказание последовательности и восстановление боковых цепей"
-      ],
       "metadata": {
         "id": "zczUU_Q5KXs0"
-      }
+      },
+      "source": [
+        "Для предсказания последовательности по структуре также существуют и обычные нейросети, например, ProteinMPNN (https://github.com/dauparas/ProteinMPNN). Возьмем фреймворк (https://github.com/nrbennet/dl_binder_design), включающий в себя предсказание последовательности и восстановление боковых цепей"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "g8j5DR7cL52-"
+      },
+      "outputs": [],
       "source": [
         "# get dl_binder_design to perform both sequence prediction and sidechain relaxation\n",
         "!git clone https://github.com/nrbennet/dl_binder_design.git\n",
         "!cd dl_binder_design/mpnn_fr; git clone https://github.com/dauparas/ProteinMPNN.git"
-      ],
-      "metadata": {
-        "id": "g8j5DR7cL52-"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "D-v2eC4nRlcX"
+      },
+      "outputs": [],
       "source": [
         "%%time\n",
         "!python dl_binder_design/helper_scripts/addFIXEDlabels.py --pdbdir toxin_diff --trbdir toxin_diff --verbose\n",
         "!python dl_binder_design/mpnn_fr/dl_interface_design.py  -pdbdir toxin_diff  -outpdbdir toxin_diff_mpnn \\\n",
         " -seqs_per_struct 1 -relax_cycles 2\n"
-      ],
-      "metadata": {
-        "id": "D-v2eC4nRlcX"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "HiwqQOX2U7xe"
+      },
+      "outputs": [],
       "source": [
         "p = py3Dmol.view(js='https://3dmol.org/build/3Dmol.js')\n",
         "\n",
@@ -507,15 +512,15 @@
         "p.setStyle({'chain': 'B'},{'stick':{'colorscheme':'blueCarbon'}})\n",
         "p.zoomTo() # центрировать структуру\n",
         "p.show()"
-      ],
-      "metadata": {
-        "id": "HiwqQOX2U7xe"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "voU_wB33fUKA"
+      },
+      "outputs": [],
       "source": [
         "parser=PDBParser(QUIET=True)\n",
         "structure=parser.get_structure(\"1AKG\",'toxin_diff_mpnn/result_0_dldesign_0_cycle2.pdb')\n",
@@ -523,33 +528,28 @@
         "    for chain in model:\n",
         "        print(len(chain))\n",
         "        print(' '.join([x.get_resname() for x in chain]))"
-      ],
-      "metadata": {
-        "id": "voU_wB33fUKA"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## 6. Домашняя работа"
-      ],
       "metadata": {
         "id": "akZlr38CV2g4"
-      }
+      },
+      "source": [
+        "## 6. Домашняя работа"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "KClWY6jfV66K"
+      },
       "source": [
         "1. Предскажите структуры сгенерированных последовательностей с помощью альфафолда, рассчитайте их rmsd со структурами, сгенерированными rfdesign и rfdiffusion, сделайте вывод о качестве предсказания.\n",
         "2. Рассчитайте внутреннюю энергию полученных комплексов, сделайте вывод о стабильности сгенерированных белков.\n",
         "\n",
         "*оба задания можно сделать с использованием функционала RFDesign (подсказки здесь https://github.com/RosettaCommons/RFDesign/blob/main/tutorials/halluc_PD-L1_binder/halluc_PD-L1_binder.ipynb)*"
-      ],
-      "metadata": {
-        "id": "KClWY6jfV66K"
-      }
+      ]
     }
   ],
   "metadata": {
